--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -900,7 +900,7 @@ html {
 
 /* Hover effect on Service Box */
 .service-box:hover {
-    transform: scale(1.07); /* Slightly increase the size */
+    transform: scale(1.04); /* Slightly increase the size */
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2); /* Add a larger shadow effect */
     background: linear-gradient(135deg, rgb(182, 182, 219), rgb(216, 154, 118)); /* Background color change */
 }
@@ -1190,267 +1190,357 @@ html {
 
 
 
-/* Our Technologies styling */
-#technologies {
-    margin: 50px auto;
-    width: 80%;
+/* Technologies Stack Section styling */  
+
+#tech-section {
+    padding: 40px;
+    background: rgb(255, 255, 255);
+    font-family: 'Arial', sans-serif;
+}
+
+.tech-section-title {
     text-align: center;
-}
-
-.flower-row {
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 50px;
-    flex-wrap: wrap; /* Allow wrapping for smaller screens */
-}
-
-.flower {
+    font-size: 36px;
+    color: #ff4757;
+    font-weight: bold;
+    text-shadow: 2px 2px 15px rgba(0, 0, 0, 0.6);
+    transition: all 0.3s ease-in-out;
+    margin-bottom: 30px;
     position: relative;
-    width: 450px; /* Increased flower size */
-    height: 450px; /* Increased flower size */
-    margin: 0 auto;
 }
 
-.petal {
-    position: absolute;
-    width: 160px; /* Increased petal size */
-    height: 160px; /* Increased petal size */
-    background: linear-gradient(135deg, rgba(170, 196, 253, 0.8), rgb(8, 55, 116));
-    border-radius: 33px;
-    box-shadow: 3px 3px 10px rgb(8, 55, 116);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-family: 'Arial', sans-serif;
-    color: white;
-    text-align: center;
-    font-weight: bold;
-    font-size: 18px; 
-    animation: pulse 30s;
-    opacity: 1;
+.tech-section-title:hover {
+    transform: translateY(-10px) translateX(-10px);
+    text-shadow: 0 8px 16px rgba(0, 0, 0, 0.5); /* Apply text shadow effect */
+    transition: all 0.3s ease-in-out; /* Smooth transition for transform and text-shadow */
 }
 
-.petal-1 {
-    top: 10%;
-    left: 10%;
-    transform: translateX(-50%) rotate(45deg);
-    animation: petalOpen 5s ease-in-out infinite;
-}
+   
 
-.petal-2 {
-    top: 10%;
-    right: 10%;
-    transform: translateX(50%) rotate(45deg);
-    animation: petalOpen 5s ease-in-out infinite;
-}
-
-.petal-3 {
-    bottom: 10%;
-    left: 10%;
-    transform: translateX(-50%) rotate(225deg);
-    animation: petalOpen 5s ease-in-out infinite;
-}
-
-.petal-4 {
-    bottom: 10%;
-    right: 10%;
-    transform: translateX(50%) rotate(225deg);
-    animation: petalOpen 5s ease-in-out infinite;
-}
-
-@keyframes petalOpen {
+@keyframes titleAnimation {
     0% {
-        transform: scale(1);
-        opacity: 1;
+        opacity: 0;
+        transform: translateY(30px);
     }
-    50% {
-        transform: scale(1.1);
+    40% {
         opacity: 1;
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateY(10px);
+    }
+    80% {
+        transform: translateY(-5px);
     }
     100% {
-        transform: scale(1);
-        opacity: 1;
+        transform: translateY(0);
     }
 }
 
-.center {
-    position: absolute;
-    top: 35%;
-    left: 35%;
-    transform: translate(-50%, -50%);
-    width: 150px; 
-    height: 150px;
-    background-color: rgb(207, 24, 24);
-    border-radius: 100%;
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-    font-family: 'Arial', sans-serif;
-    font-size: 25px;
-    text-align: center;
-    box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.4);
-    animation: centerPulse 3s infinite;
+
+
+/* Card Layout */
+
+.tech-cards {
     display: flex;
-    flex-direction: column;
+    gap: 20px;
     justify-content: center;
-    align-items: center;
-    padding: 10px;
+    align-items: flex-start;
+    flex-wrap: wrap;
+   
 }
 
-.center img {
-    width: 40%;
-    height: 40%;
+.tech-card {
+    background: white;
+    box-shadow: 0 8px 16px rgba(59, 58, 58, 0.5); /* Apply shadow effect */
+    border-radius: 10px;
+    overflow: hidden;
+    width: 45%;
+    height: 480px;
+    min-width: 300px;
+    border: 1px solid #000000; /* Add border */
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+
+.tech-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+/* Slider Card */
+.tech-slider-card .tech-slider {
+    position: relative;
+    overflow: hidden;
+    height: 500px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.tech-slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.tech-slide {
+    min-width: 100%;
+    text-align: center;
+    padding: 20px;
+}
+
+.tech-slide img {
+    width: 440px;
+    height: 280px;
     object-fit: cover;
+    margin: 10px 0;
+}
+
+.tech-slide h3 {
+    font-size: 24px;
     margin-bottom: 5px;
-    transition: transform 0.3s ease, opacity 0.3s ease, box-shadow 0.3s ease;
+    font-weight: bold;
+    margin-bottom: 30px;
+    color: rgb(8, 55, 116);
+    text-shadow: 1px 1px 5px rgba(238, 199, 27, 0.5);
+    position: relative;
+    animation: titleFadeIn 1.5s ease-in-out;
+    overflow: hidden;
 }
 
-.center h4 {
+.tech-slide p {
     font-size: 15px;
-    font-weight: normal;
+    margin-bottom: 5px;
+    font-weight: bold;
+    margin-bottom: 30px;
+    color: rgb(250, 16, 16);
+}
+
+
+.tech-slider-controls {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+}
+
+.tech-slider-controls button {
+    background: rgba(0, 0, 0, 0.5);
     color: white;
-    margin: 0;
-    transition: transform 0.3s ease, opacity 0.3s ease, box-shadow 0.3s ease;
+    border: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    animation: pulse 1.5s infinite;
 }
 
-@keyframes pulse {
+.tech-slider-controls button:hover {
+    background: rgba(0, 0, 0, 0.8);
+}
+
+/* Content Card */
+.tech-content-card {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.tech-card-title {
+    font-size: 24px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    margin-bottom: 30px;
+    color: rgb(8, 55, 116);
+    text-shadow: 1px 1px 5px rgba(238, 199, 27, 0.5);
+    position: relative;
+    animation: titleFadeIn 1.5s ease-in-out;
+    overflow: hidden;
+}
+
+.tech-card-title::after {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 0;
+    height: 3px;
+    background: linear-gradient(to right, rgba(238, 199, 27, 0.8), rgb(8, 55, 116));
+    transition: width 0.5s ease;
+}
+
+.tech-card-title:hover::after {
+    width: 100%;
+}
+
+@keyframes titleFadeIn {
     0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.1);
+        opacity: 0;
+        transform: translateY(20px);
     }
     100% {
-        transform: scale(1);
-    }
-}
-
-@keyframes centerPulse {
-    0% {
-        transform: scale(1);
-        opacity: 0.9;
-    }
-    50% {
-        transform: scale(1.1);
         opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+.tech-card-title:hover::after {
+    width: 100%;
+}
+
+@keyframes titleFadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
     }
     100% {
-        transform: scale(1);
-        opacity: 0.9;
+        opacity: 1;
+        transform: translateY(0);
     }
 }
 
-.flower:hover .petal {
-    transform: scale(1.3) rotate(15deg) translateY(-20px);
-    opacity: 0.8;
-    color: #000000;
-    box-shadow: 0px 0px 25px rgba(209, 154, 2, 0.8);
+.tech-card-description {
+    font-size: 14px;
+    margin-bottom:10px;
+    font-weight: bold;
+    color: rgb(8, 55, 116);
+    text-align: left;
 }
 
-.flower:hover .center {
-    transform: scale(1.3) rotate(10deg);
-    opacity: 1;
-    box-shadow: 0px 0px 25px rgba(209, 154, 2, 0.8);
+.tech-read-more {
+    padding: 10px 10px;
+    background:rgb(8, 55, 116);
+    color: white;
+    border: none;
+    border-radius: 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s ease;
 }
 
-.flower:hover {
-    transform: scale(1.1);
-    filter: brightness(1.1);
+
+
+@keyframes descFadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
-.flower:hover .flower-row {
-    border: 5px solid rgb(8, 55, 116, 0.5);
+.tech-read-more:hover {
+    background: #e63946;
 }
 
-/* --------------------- Media Queries --------------------- */
-
-/* For smaller screens (tablets and below) */
+/* Responsive Design */
 @media (max-width: 768px) {
-    .flower {
-        width: 180px;  /* Adjust flower size on tablets */
-        height: 180px;
+    .tech-cards {
+        flex-direction: column;
+        align-items: center;
     }
 
-    .petal {
-        width: 90px;  /* Smaller petal size on tablets */
-        height: 90px;
-        font-size: 12px; /* Adjusted font size */
-        gap: 15px;      /* Adjust gap to ensure better visibility */
-    }
-
-    .petal-1, .petal-2, .petal-3, .petal-4 {
-        width: 90px;
-        height: 90px;
-        font-size: 12px; /* Adjust font size for each petal */
-        gap: 15px;       /* Set the same gap for all petals */
-        margin-top: 10px;
-    }
-
-    .center {
-        width: 80px;  /* Slightly smaller center on tablets */
-        height: 80px;
-        font-size: 16px;
-    }
-
-    .center img {
-        width: 60%;    /* Adjust image size in the center */
-        height: 60%;
-    }
-
-    /* Stack flower petals vertically on smaller screens */
-    .flower-row {
-        /* Stack petals vertically */
-        align-items: center;       /* Center the flower horizontally */
-        justify-content: center;   /* Center content vertically */
-    }
-
-    .flower-row .flower {
-        margin-bottom: 20px;   /* Space between flowers */
+    .tech-card {
+        width: 80%;
     }
 }
 
-/* For even smaller screens (mobile phones) */
+/* Responsive Design for Mobile */
+@media (max-width: 768px) {
+    /* Tech Section */
+    #tech-section {
+        padding: 15px; /* Adjust padding for mobile */
+    }
+
+    .tech-section-title {
+        font-size: 28px; /* Adjust font size for mobile */
+        margin-bottom: 20px; /* Reduce bottom margin */
+    }
+
+    /* Tech Cards */
+    .tech-cards {
+        flex-direction: column;
+        align-items: center;
+        gap: 15px; /* Reduce gap between cards */
+    }
+
+    .tech-card {
+        width: 90%; /* Increase width for mobile devices */
+        height: auto; /* Allow height to adjust automatically */
+        max-width: 500px; /* Set a maximum width for cards */
+        padding: 15px; /* Add padding inside cards for better spacing */
+    }
+
+    /* Adjust Card Title */
+    .tech-card-title {
+        font-size: 20px; /* Adjust font size to make the title fit */
+        margin-bottom: 10px; /* Reduce margin for better spacing */
+        text-align: center; /* Ensure title is centered */
+        word-wrap: break-word; /* Ensure title wraps on smaller screens */
+    }
+
+    /* Slider Card */
+    .tech-slider-card .tech-slider {
+        height: 500px; /* Adjust slider height for mobile */
+    }
+
+    .tech-slide img {
+        width: 100%; /* Ensure images are responsive */
+        height: auto; /* Maintain aspect ratio */
+    }
+
+    /* Content Card */
+    .tech-content-card {
+        padding: 10px; /* Adjust padding for mobile */
+    }
+
+    .tech-card-title {
+        font-size: 22px; /* Adjust font size for mobile */
+        margin-bottom: 15px; /* Adjust margin for mobile */
+    }
+
+    .tech-card-description {
+        font-size: 12px; /* Adjust font size for mobile */
+    }
+
+    .tech-read-more {
+        padding: 8px 15px; /* Adjust padding for mobile */
+        font-size: 14px; /* Adjust font size for mobile */
+    }
+}
+
+/* For Extra Small Devices (Phone) */
 @media (max-width: 480px) {
-    .flower {
-        width: 160px;  /* Smaller flower size on mobile */
-        height: 160px;
+    .tech-section-title {
+        font-size: 24px; /* Further reduce font size for smaller screens */
     }
 
-    .petal {
-        width: 80px;   /* Smaller petal size on mobile */
-        height: 80px;
-        font-size: 10px; /* Smaller font size */
-        gap: 10px;      /* Adjust gap for mobile */
+    .tech-card {
+        width: 95%; /* Make cards almost full width */
+        height: auto; /* Allow cards to adjust height automatically */
     }
 
-    .petal-1, .petal-2, .petal-3, .petal-4 {
-        width: 80px;
-        height: 80px;
-        font-size: 10px; /* Smaller font size */
-        gap: 10px;       /* Reduced gap for better fit */
+    .tech-slider-card .tech-slider {
+        height: 400px; /* Reduce slider height for smaller screens */
     }
 
-    .center {
-        width: 70px;  /* Smaller center on mobile */
-        height: 70px;
-        font-size: 10px;
+    .tech-slide img {
+        width: 100%; /* Ensure images are responsive */
+        height: auto; /* Maintain aspect ratio */
     }
 
-    .center img {
-        width: 50%;    /* Smaller image in the center */
-        height: 50%;
-    }
-
-  
-
-    .flower-row {
-        display: flex;
-        flex-direction: column;   /* Stack petals vertically */
-        justify-content: center;  /* Vertically center petals */
-        align-items: center;      /* Center horizontally */
+    /* Adjust Card Title for Extra Small Devices */
+    .tech-card-title {
+        font-size: 18px; /* Further reduce font size for smaller screens */
+        margin-bottom: 10px; /* Adjust bottom margin */
+        word-wrap: break-word; /* Ensure the title wraps properly */
     }
 }
-
 
 
 
@@ -1767,7 +1857,7 @@ html {
     margin-bottom: 40px;
     margin-left: 150px; /* Move slider a bit to the left */
     margin-right: 70px;
-    width: 80%; /* Adjusted width to make it smaller */
+    width: 880px; /* Adjusted width to make it smaller */
 }
 
 /* Slider Styling */
@@ -1815,7 +1905,7 @@ html {
     margin: 0 auto;
     border-radius: 10px;
     margin-bottom: 20px;
-    transition: transform 0.3s ease;
+   
 }
 
 .certificate-card img:hover {
@@ -1858,13 +1948,13 @@ html {
     cursor: pointer;
     z-index: 1;
     border-radius: 50%;
-    font-size: 24px;
+    font-size: 15px;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .prev-btn:hover, .next-btn:hover {
     background-color: rgba(230, 7, 7, 0.8);
-    transform: scale(1.2);
+   
 }
 
 .prev-btn {
@@ -1973,12 +2063,12 @@ html {
     }
 
     .achievements-text {
-        max-width: 100%;
+        max-width: 150%;
         margin-bottom: 30px;
     }
 
     .certificate-slider-section {
-        width: 100%;
+        width: 150%;
     }
 
     /* Adjust navigation buttons */
@@ -1989,7 +2079,8 @@ html {
 
     /* Adjust font sizes */
     .achievements-title {
-        font-size: 28px;
+        font-size: 25px;
+        margin-left: 20px;
     }
 
     .achievements-description {
